--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
-    "webpack": "^5.40.0"
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
