--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
